# microtubule_acetylation

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_n_run.sh  clear_experiments.sh  run.sh
R/: plotter.Rmd
docs/: MT_Modeling.docx  params.txt
include/: axis.hpp  config.hpp  geometry.hpp  objects.hpp  probability.hpp  simulation.hpp
python/: stitch_txt_files.ipynb  test_spacing.py
python/utils/: file_utils.py
src/: axis.cpp  geometry.cpp  main.cpp  objects.cpp  probability.cpp  simulation.cpp
